src/objects/Test_Script__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents an executable script for a specific test scenario.</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <description>This is to Capture the actual result of Test script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>As_a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As a</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Users would should execute the test script.</inlineHelpText>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the test script should be used for automated testing.</inlineHelpText>
        <label>Automated Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Test_Status__c</fullName>
        <description>aggregating the script execution line items</description>
        <formula>IF((Total_UAT_Test_Executions_Failed__c = 0)  &amp;&amp;  ( Total_UAT_Test_Executions_Passed__c =0), &quot;Not Started&quot;,  IF(Total_UAT_Test_Executions_Failed__c &gt; 0, &quot;Failed&quot;, &quot;Passed&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ Test Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on the test execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the test script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Detail__c</fullName>
        <description>Environment Details for Test Script</description>
        <label>Environment Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>Date of test execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Steps__c</fullName>
        <description>Execution steps for the test script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Type of test execution</description>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>E2E - SIT</fullName>
                </value>
                <value>
                    <fullName>E2E - UAT</fullName>
                </value>
                <value>
                    <fullName>Production Validation</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <description>Expected results of the test script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <formula>Request__r.Feature__r.Name</formula>
        <label>Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Data__c</fullName>
        <description>Input data for the test script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The ‘Market’ field is needed to Run &amp; Monitor the test scripts of the UAT Testers for each Market.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Execution_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>LAT</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Execution_Date__c</fullName>
        <description>Planned Execution Date for the Test Script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Planned Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Release of the test script</description>
        <formula>Test_Scenario__r.Request__r.Sprint__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Request for which the test script is created</description>
        <label>Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Enter the Sequence in which the Test Scripts are to be executed</description>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>Test_Scenario__r.Sprint__c</formula>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Test_Scenario__r.Team__c</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <description>Result of test execution</description>
        <label>Test Script Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Peer Review</fullName>
                </value>
                <value>
                    <fullName>Pending BA Review</fullName>
                </value>
                <value>
                    <fullName>Pending Clarification</fullName>
                </value>
                <value>
                    <fullName>Signed off</fullName>
                </value>
                <value>
                    <fullName>Business Signed Off</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>BA Reviewed - Update needed</fullName>
                    <label>Reviewed - Update needed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <description>Test scenario of the test script</description>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Script_Signed_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Script Signed Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_In_Progress_Test_Executions__c</fullName>
        <label>Total In Progress Test Executions</label>
        <summaryFilterItems>
            <field>Test_Execution__c.Test_Result__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Execution__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Test_Executions_Failed__c</fullName>
        <description>Count of Failed Test Executions</description>
        <label>Total Test Executions Failed</label>
        <summaryFilterItems>
            <field>Test_Execution__c.Test_Result__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Execution__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Test_Executions_Passed__c</fullName>
        <description>Passed count</description>
        <label>Total Test Executions Passed</label>
        <summaryFilterItems>
            <field>Test_Execution__c.Test_Result__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Execution__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Test_Executions_Planned__c</fullName>
        <description>Count of Total Test Executions Planned</description>
        <label>Total Test Executions Planned</label>
        <summaryForeignKey>Test_Execution__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_UAT_Test_Executions_Failed__c</fullName>
        <label>Total UAT Test Executions Failed</label>
        <summaryFilterItems>
            <field>Test_Execution__c.Test_Result__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Test_Execution__c.Execution_Type__c</field>
            <operation>contains</operation>
            <value>UAT</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Execution__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_UAT_Test_Executions_Passed__c</fullName>
        <description>Count of test Scripts Passed in UAT</description>
        <label>Total UAT Test Executions Passed</label>
        <summaryFilterItems>
            <field>Test_Execution__c.Test_Result__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Test_Execution__c.Execution_Type__c</field>
            <operation>contains</operation>
            <value>UAT</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Execution__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Login_Details__c</fullName>
        <description>Added a field for User Details where login information will be added</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Login Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of the test script</description>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>ACL_S6</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ACL S6</label>
    </listViews>
    <listViews>
        <fullName>AII_E2E_UAT_Jan_Feb_2016</fullName>
        <columns>Test_Scenario__c</columns>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>Team__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Actual_Result__c</columns>
        <columns>Execution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>startsWith</operation>
            <value>Interface</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>AII - E2E UAT (Jan Feb 2016)</label>
    </listViews>
    <listViews>
        <fullName>Account_Leads_Contacts</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Actual_Result__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Comments__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Description__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Request__c</columns>
        <columns>Release__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>Org Strategy</value>
        </filters>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>UAT,E2E - UAT</value>
        </filters>
        <filters>
            <field>Test_Result__c</field>
            <operation>notContain</operation>
            <value>#</value>
        </filters>
        <label>Org Strategy</label>
    </listViews>
    <listViews>
        <fullName>Account_Leads_Contacts_BS</fullName>
        <columns>Market__c</columns>
        <columns>Execution_Type__c</columns>
        <columns>NAME</columns>
        <columns>Actual_Result__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Comments__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Description__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Request__c</columns>
        <columns>Release__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>Lead</value>
        </filters>
        <filters>
            <field>Execution_Type__c</field>
            <operation>contains</operation>
            <value>UAT,E2E - UAT</value>
        </filters>
        <filters>
            <field>Test_Result__c</field>
            <operation>notContain</operation>
            <value>#</value>
        </filters>
        <label>Account; Leads; Contacts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Team__c</columns>
        <columns>Execution_Type__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Execution_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Release__c</columns>
        <columns>Sprint__c</columns>
        <columns>Test_Case_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_E2E_UAT_EUR</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Execution_Date__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Actual_Result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - E2E UAT EUR</label>
    </listViews>
    <listViews>
        <fullName>All_E2E_UAT_Feb_2016</fullName>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Team__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Actual_Result__c</columns>
        <columns>Execution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>UAT April Rel.</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>Appro</value>
        </filters>
        <label>IWA - UAT (April 2017) EUR</label>
    </listViews>
    <listViews>
        <fullName>All_E2E_UAT_Jan_Feb_2016_MEA</fullName>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Team__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Actual_Result__c</columns>
        <columns>Execution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>E2E - UAT</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>MEA</value>
        </filters>
        <label>All - E2E UAT (Jan Feb 2016) MEA</label>
    </listViews>
    <listViews>
        <fullName>All_PRM_Release_1_Regression_Testers4</fullName>
        <columns>NAME</columns>
        <columns>Execution_Type__c</columns>
        <columns>Feature__c</columns>
        <columns>Release__c</columns>
        <columns>Request__c</columns>
        <columns>Sprint__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Tester__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>PRM release 1</value>
        </filters>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>Regression Test</value>
        </filters>
        <filters>
            <field>Tester__c</field>
            <operation>contains</operation>
            <value>Twisham,Govind,Supriyam</value>
        </filters>
        <label>Assigned to Gaurav Rampal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sprint_4_Test_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Description__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>CPQ W1/R1 - Sprint 1</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>CPQ W1/R1 - Sprint 2</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>CPQ W1/R1 - Sprint 3</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>CPQ W1/R1 - Sprint 4</value>
        </filters>
        <label>All Sprint 4 Test Scripts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_UAT</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Team__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>Accounts</value>
        </filters>
        <filters>
            <field>Request__c</field>
            <operation>equals</operation>
            <value>2230</value>
        </filters>
        <label>All - UAT</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Doc_Strategy</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>Sequence__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Market__c</columns>
        <columns>Comments__c</columns>
        <columns>Team__c</columns>
        <columns>Execution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Doc Strategy</value>
        </filters>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>E2E - UAT</value>
        </filters>
        <label>All - UAT (Doc Strategy)</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Forecasting</fullName>
        <columns>NAME</columns>
        <columns>Team__c</columns>
        <columns>Request__c</columns>
        <columns>Execution_Type__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Forecasting</value>
        </filters>
        <label>All - UAT (Forecasting)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_UAT_LoA</fullName>
        <columns>NAME</columns>
        <columns>Team__c</columns>
        <columns>Execution_Type__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Execution_Steps__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Comments__c</columns>
        <columns>Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>LoA</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>MEA</value>
        </filters>
        <label>All - UAT (LoA)</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_Sales_Process</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Description__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Comments__c</columns>
        <columns>Team__c</columns>
        <columns>Execution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>UAT</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Sales Process</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>sales</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/15/2016 12:00 AM</value>
        </filters>
        <label>All - UAT (Sales Process)</label>
    </listViews>
    <nameField>
        <displayFormat>TestScript-{0000000000}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Market_reqd_for_UAT_April_Rel_Scripts</fullName>
        <active>true</active>
        <description>Market_reqd_for_UAT_April_Rel._Scripts</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Execution_Type__c, &quot;UAT April Rel.&quot;),
  ISPICKVAL(Market__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Market__c</errorDisplayField>
        <errorMessage>Market must be filled for UAT April Rel. test scripts</errorMessage>
    </validationRules>
</CustomObject>